--- a/lf/.local/share/lf/history
+++ b/lf/.local/share/lf/history
@@ -165,3 +165,15 @@ $ tar xf Word_of_the_Day.jar
 $ mkdir .local
 $ mkdir share
 $ mkdir lf
+$ chmod +x ad2p.py 
+$ mkdir docs
+$ mkdir repairs
+$ touch bluetooth.md
+: set hidden
+: set hidden!
+: set hiddenfiles false
+: set hidden
+: set hidden!
+: r
+: trash 
+: trash 
