--- a/lf/.local/share/lf/history
+++ b/lf/.local/share/lf/history
@@ -177,3 +177,26 @@ $ touch bluetooth.md
 : r
 : trash 
 : trash 
+$ mkdir authpass
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: trash 
+: help
+: doc 
